tests/valid/57551_if_then_else_right_associative/if_then_else_right_associative.mag
-- Author: 57551, Eduardo Proença

-- `if`/`then`/`else` associates to the right;

fun main (_) : Unit -> Unit =
    print(
        if true then
            if false then 1 else 2
        else
            3
    )